--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "macro-css": "^1.0.5",
     "node-sass": "^4.14.1",
     "react": "^18.2.0",
