--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "albion-online",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://193.168.49.9:5000",
   "allowedHosts": "all",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
