--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "albion-online",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://193.168.49.9:5000",
-  "allowedHosts": "all",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
