--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "albion-online",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://albion-backend.onrender.com",
+  "proxy": "https://localhost:5000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
